# infraresolutionbench

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
docs/: benchmark-design.md  (+7 more)
environments/infraresolutionbench/: MANIFEST.in  README.md  pyproject.toml
environments/infraresolutionbench/.prime/: .env-metadata.json
environments/infraresolutionbench/infraresolutionbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
environments/infraresolutionbench/infraresolutionbench/data/generated_cases/ambiguous_case/: synthetic_ambiguous_case_008.json  synthetic_ambiguous_case_012.json  synthetic_ambiguous_case_013.json  synthetic_ambiguous_case_015.json
environments/infraresolutionbench/infraresolutionbench/data/generated_cases/clean_covered_outage/: synthetic_clean_outage_001.json  synthetic_clean_outage_003.json  synthetic_clean_outage_004.json  synthetic_clean_outage_010.json  synthetic_clean_outage_012.json  synthetic_clean_outage_013.json  synthetic_clean_outage_014.json  synthetic_clean_outage_017.json
environments/infraresolutionbench/infraresolutionbench/data/generated_cases/customer_caused_failure/: synthetic_customer_caused_001.json  (+6 more)
environments/infraresolutionbench/infraresolutionbench/data/gold_cases/: gold_case_001_crm_billing_mismatch.json  gold_case_002_clean_sla_breach.json  gold_case_006_goodwill_optional.json  gold_case_012_customer_retry_storm_review.json  gold_case_013_maintenance_delay_review.json  gold_case_014_scheduler_delay_credit_due.json  gold_case_015_short_gpu_failure_no_credit.json
(+260 files in other folders)
